# dpss

./: .gitignore
Centre Control/: cnnserver.py  dpmanager.py
ClientAPI/: sendimg.sln
ClientAPI/APItest/: APItest.vcxproj  main.cpp
ClientAPI/SenderAPI/: MyImg.cpp  MyQueue.h  SenderAPI.h  SenderAPI.vcxproj  SenderAPI.vcxproj.filters  dllmain.cpp
ClientAPI/SenderAPI/socket-lib/: Socket.hpp  TCP.cpp
ClientAPI/src/: CMakeLists.txt  MyImg.h  MyQueue.cpp  SenderAPI.cpp  SenderAPI.h  dllmain.cpp  main.cpp  setting.ini  stdafx.cpp  stdafx.h
ClientAPI/src/socket-lib/: CommonSocket.cpp  TCP.cpp  UDP.cpp
DP classifier/: config.xml  modelServer.py
Web Server/: CnnWebServer.py
Web Server/templates/: index.html
doc/: DP管理.xlsx  深度学习架构.vsd  深度学习算法服务.docx
